<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.e3.bleapi.demo.MainActivity" >
    <item
        android:id="@+id/action_add_device"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_add_device"/>
    
    <item
        android:id="@+id/action_add_profile"
        android:orderInCategory="110"
        android:showAsAction="collapseActionView"
        android:title="@string/action_add_profile"/>
    <item
        android:id="@+id/action_apply_profile"
        android:orderInCategory="110"
        android:showAsAction="collapseActionView"
        android:title="@string/action_applay_profile"/>
    <item
        android:id="@+id/action_del_profile"
        android:orderInCategory="110"
        android:showAsAction="collapseActionView"
        android:title="@string/action_del_profile"/>
    <item
        android:id="@+id/action_set_time"
        android:orderInCategory="110"
        android:showAsAction="collapseActionView"
        android:title="@string/action_set_time"/>
    <item
        android:id="@+id/action_get_time"
        android:orderInCategory="110"
        android:showAsAction="collapseActionView"
        android:title="@string/action_get_time"/>
    

</menu>
